--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "^5.4.4",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "jshint": "^2.13.6",
     "popper.js": "^1.16.1",
     "react-scripts": "^5.0.1",
     "turbolinks": "^5.2.0",
