--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+.env
+.env.development
+.env.test
+.env.production
 
 /public/packs
 /public/packs-test
